--- a/TAREA 1 MODULO VI.Rmd
+++ b/TAREA 1 MODULO VI.Rmd
@@ -2,7 +2,7 @@
 output: pdf_document
 ---
 
-```{r setup, include=FALSE}
+```{r fig.align = "center",setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(root.dir = "../..")
 ```
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(root.dir = "../..")
 * Marisol Estrada Téllez
 
 Para la presente tarea se trabajará con la siguiente base da datos llamada *water potability.csv* 
-la cual contiene medidas físico-químicas y evaluaciones de la calidad del agua relacionadas con su potabilidad, es decir, la idoneidad para el consumo humano. Proporciona información sobre los parámetros de la calidad del agua y ayudar a
+la cual contiene medidas físico-químicas y evaluaciones de la calidad del agua relacionadas con su potabilidad, es decir, la idoneidad para el consumo humano. Proporciona información sobre los parámetros de la calidad del agua y nos ayudará a
 determinar si es potable o no. 
 
 Cada renglón representa una muestra de agua con atributos específicos y la columna *Potability* indica si el agua es o no apta para el consumo humano. 
@@ -41,7 +41,7 @@ El objetivo de esta tarea es usar técnicas de reducción de dimensionalidad par
 
 **Iniciamos revisando nuestro dataset y haciendo un análisis exploratorio.**
 
-```{r message=FALSE, warning=FALSE, include=FALSE}
+```{r fig.align = "center", message=FALSE, warning=FALSE, include=FALSE}
 ###Librerias
 library(tidymodels)
 library(tidyverse)
@@ -83,7 +83,7 @@ theme_set(theme_bw(16))
 
 Cargamos nuestra base de datos.
 
-```{r message=FALSE, warning=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE}
 # Cargamos la base de datos
 df<-read.csv("water_potability.csv")
 df$Potability <- as.factor(df$Potability)
@@ -91,20 +91,20 @@ df$Potability <- as.factor(df$Potability)
 
 Veamos la dimensión de nuestra base, la cual tiene 3276 registros y 10 columnas.
 
-```{r message=FALSE, warning=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE}
 df %>% dim()
 ```
 
 Checamos los tipos de datos que tenemos y algunos registros.
-```{r message=FALSE, warning=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE}
 df %>% glimpse()
 df %>% head()
 ```
 
-Podemos observar que tenemos algunos datos faltantes de pH Sulfatos, además, la variable "Potability" es la única variable que es de tipo "int".
+Podemos observar que tenemos algunos datos faltantes de pH y Sulfatos, además, la variable "Potability" es la única variable que es de tipo factor, ya que en un principio era de tipo entero.
 
 Revisamos cuántos datos faltantes tenemos por cada columna.
-```{r message=FALSE, warning=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE}
 colSums(is.na(df))
 ```
 
@@ -117,17 +117,17 @@ Observemos que:
 
 Imputaremos los datos faltantes con ayuda de la función  `mice` usando el método PMM (Coincidencia de Medias Predictivas).
 
-```{r message=FALSE, warning=FALSE, results="hide"}
+```{r fig.align = "center",message=FALSE, warning=FALSE, results="hide"}
 imputed_data <- mice(df, m = 5, method = 'pmm', maxit = 5, seed = 123)
 ```
 
-Vamos a poner en nuestra variable df los datos imputados.
-```{r message=FALSE, warning=FALSE}
+Vamos a poner en nuestra variable `df` los datos imputados.
+```{r fig.align = "center",message=FALSE, warning=FALSE}
 df <- complete(imputed_data, 1)
 ```
 
 Comprobemos que ya no tenemos datos faltantes en nuestro dataframe.
-```{r message=FALSE, warning=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE}
 colSums(is.na(df))
 ```
 
@@ -135,7 +135,7 @@ colSums(is.na(df))
 
 A continuación creamos una tabla que nos muestra el mínimo, primer cuantil, la mediana, media, tercer quantil y el máximo de cada una de nuestras columnas.
 
-```{r message=FALSE, warning=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, fig.width= 12}
 num.dat <- df %>% select_if(is.numeric)
 # num.dat %>% glimpse()
 
@@ -150,7 +150,7 @@ apply(num.dat,2,function(x) round(summary(x),3)) %>%
 Tomamos como variable de clasificación: potability, cabe mencionar que esto lo hacemos solo de referencia ya que, en aprendizaje supervisado no tenemos una variable de salida que nos ayude a categorizar, solo lo haremos para fines ilustrativos.
 
 Revisamos cuántos tipos de agua son adecuados para el consumo humano y cuántos no lo son.
-```{r message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height=4}
 df %>%
   group_by(Potability) %>%
   summarise (n = n()) %>%
@@ -161,18 +161,18 @@ ggplot(aes(df,x = Potability, y = n)) +
     geom_text(aes(label = paste0(n, " | ", signif(n / nrow(df) * 100, digits = 4), '%')), nudge_y = 10) + ggtitle("Porcentajes de agua potable y no potable")
 ```
 
-Podemos observar que hay 1998 registros que no son aptos para el consumo humano y 1278 registros si son aptos para el consumo humano.
-Además, **60.99% de registros no son aptos para el consumo humano y un 39.01% sí lo son**.
+Podemos observar que hay 1998 registros que no son aptos para el consumo humano y 1278 registros sí son aptos para el consumo humano, es decir, el **60.99% de registros no son aptos para el consumo humano y un 39.01% sí lo son**.
 
 **Ahora, realizamos histogramas de cada una de nuestras columnas.**
 
 **Boxplots:**
-```{r, warning=FALSE, message=FALSE, include=FALSE}
+
+```{r fig.align = "center", warning=FALSE, message=FALSE, include=FALSE}
 df_long <- df %>% 
     pivot_longer(!Potability, names_to = "predictores", values_to = "values")
 ```
 
-```{r, warning=FALSE, message=FALSE, echo = FALSE}
+```{r fig.align = "center", warning=FALSE, message=FALSE, echo = FALSE, fig.width = 8, fig.height=4}
 df_long %>% 
   ggplot(mapping = aes(x = Potability, y = values, fill = as.factor(predictores))) +
   geom_boxplot(alpha = 0.4)  + theme_light() + 
@@ -185,7 +185,7 @@ df_long %>%
 
 **Histogramas:**
 
-```{r, echo =FALSE, message = FALSE, warning=FALSE}
+```{r fig.align = "center", echo =FALSE, message = FALSE, warning=FALSE, fig.width = 8, fig.height=4}
 df_long |> ggplot(mapping = aes(values, fill = Potability)) +
   geom_histogram(color = "white", alpha = 0.4) +
   theme_light() +
@@ -198,7 +198,7 @@ df_long |> ggplot(mapping = aes(values, fill = Potability)) +
 
 **Densidades:**
 
-```{r, warning=FALSE, message=FALSE, echo =FALSE}
+```{r fig.align = "center", warning=FALSE, message=FALSE, echo =FALSE, fig.width = 8, fig.height=4}
 df_long |> ggplot(mapping = aes(values, fill = Potability)) +
   geom_density(color = "white", alpha = 0.4) +
   theme_light() +
@@ -210,14 +210,18 @@ df_long |> ggplot(mapping = aes(values, fill = Potability)) +
 
 **Gráficos de dispersión:**
 
-```{r message=FALSE, warning=FALSE, echo = FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo = FALSE, fig.width = 12, fig.height=8}
 ggpairs(df, mapping = aes(color = Potability, alpha = 0.5),columns = seq(1,9), upper = "blank", diag = "blank") +
-scale_colour_manual(values = c("0" = "#ec7d15", "1" = "#10b9ec")) + labs(title = "Comparación por gráficos de dispersión")
+scale_colour_manual(values = c("0" = "#ec7d15", "1" = "#10b9ec")) + labs(title = "Comparación por gráficos de dispersión") + 
+theme(
+  axis.text.x = element_text(size = 4),
+  axis.text.y = element_text(size = 4)
+)
 ```
 
 Veamos la estructura de correlación de Spearman que tienen nuestras variables.
 
-```{r message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height=4}
 cor1_data<-cor(df[,-10],method="spearman")
 
 ggcorrplot::ggcorrplot(corr = cor1_data,
@@ -230,17 +234,18 @@ ggcorrplot::ggcorrplot(corr = cor1_data,
 
 Observamos que **no hay mucha correlación en nuestras variables** por lo que podemos intuir que la **reducción de dimensionalidad no se llevará a cabo con éxito** ya que PCA, hace una reducción de dimensión mientras haya una correlación fuerte entre nuestras variables.
 
-```{r warning = FALSE, message=FALSE}
+```{r fig.align = "center",warning = FALSE, message=FALSE}
 psych::KMO(cor1_data)
 ```
+
 Además, tomando en cuenta la medida Kaiser-Meyer-Olkin, las variables no son muy adecuadas para reducir la dimensión por estar debajo de 0.5.
 
-
 ## **PCA**
-Después de hacer un Análisis Exploratorio de nuestro Dataset podemos realizar la Reducción de dimensión utilizando el Método PCA (Componentes Principales).
+
+Después de hacer un Análisis Exploratorio de nuestro Dataset podemos realizar la reducción de dimensión utilizando el método PCA (Componentes Principales).
 
 Estandarizamos los datos y trataremos de reducir dimensionalidad con PCA.
-```{r message=FALSE, warning=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE}
 pca_fit <- df %>%
   select(where(is.numeric)) %>%
   scale() %>% #estandarizamos los datos
@@ -249,7 +254,7 @@ pca_fit <- df %>%
 
 Veamos el resultado de PCA con los 9 eigenvalores:
 
-```{r message=FALSE, warning=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE}
 pca_fit %>%
   tidy("pcs")
 ```
@@ -259,7 +264,7 @@ Observamos que los eigenvalores van decreciendo pero no son cercanos a cero, por
 
 Veamos una gráfica de codo la cual nos muestra como va bajando la varianza explicada por cada una de las Componentes Principales.
 
-```{r message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height=4}
 pca_fit %>%
   tidy("pcs") %>%
   ggplot(aes(x=term, y=prop.variance, group = 1)) +
@@ -275,7 +280,7 @@ pca_fit %>%
 Cada una de las componentes tiene casi la misma varianza por lo que podemos intuir que no será posible graficar en R3 ni en R2 ya que **si solo nos quedamos con 2 o 3 Componentes Principales perderemos mucha varianza de las demás componentes**.
 
 Veamos una gráfica ahora de la Varianza acumulativa.
-```{r message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height=4}
 pca_fit %>%
   tidy("pcs") %>%
   ggplot(aes(x=term, y= cum.prop.variance, group = 1))+
@@ -287,7 +292,7 @@ pca_fit %>%
   labs(y= "Varianza explicada acumulada",title="Scree plot")
 ```
 
-```{r message=FALSE, warning=FALSE, include=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, include=FALSE}
 variance_exp <- pca_fit %>%  
   tidy("pcs") %>% 
   pull(prop.variance)
@@ -297,7 +302,7 @@ Vamos a realizar una gráfica con los dos primeros componentes.
 
 Vamos a hacer uso de nuestra variable *Potability*.
 
-```{r message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height=4}
 pca_fit %>%
   augment(df) %>%
   rename_with(function(x){gsub("[.]","",x)}) %>%
@@ -313,7 +318,7 @@ Podemos ver que no nos separan bien los datos en los grupos que tenemos de potab
 
 Gráfica de Boxplot de la variable *Potability* con el primer componente principal.
 
-```{r message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height=4}
 pca_fit %>%
   augment(df) %>%
   rename_with(function(x){gsub("[.]","",x)}) %>%
@@ -327,7 +332,7 @@ pca_fit %>%
 
 Gráfica de Boxplot de la variable *Potability* con el segundo componente principal.
 
-```{r message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height=4}
 pca_fit %>%
   augment(df) %>%
   rename_with(function(x){gsub("[.]","",x)}) %>%
@@ -343,7 +348,7 @@ pca_fit %>%
 
 Notemos que ambas gráficas son similares los que nos indica que probablemente la diferencia en varianza explicada no es tan grande. Esto puede sugerir que ambas componentes son relevantes para entender la estructura del conjunto de datos. Pero como ya vimos anteriormente, esto ocurre también con las otras variables.
 
-```{r message=FALSE, warning=FALSE, include=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, include=FALSE}
 wdbc_recipe <-
   recipe(~., data = df) %>% 
   update_role(Potability, new_role = "id") %>% 
@@ -353,7 +358,7 @@ wdbc_recipe <-
 ```
 
 Obtenemos la carga de cada variable en el componente principal correspondiente.
-```{r message=FALSE, warning=FALSE, include=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, include=FALSE}
 wdbc_pca <- 
   wdbc_recipe %>% 
   tidy(id = "pca") 
@@ -362,7 +367,7 @@ wdbc_pca <-
 **Veremos la contribución de cada variable a los componentes principales:**
 Nota: Azul oscuro para contribución positiva y azul claro para contribución negativa.
 
-```{r message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo=FALSE, fig.width = 10, fig.height=6}
 wdbc_pca %>%
   mutate(terms = tidytext::reorder_within(terms, 
                                           abs(value), 
@@ -378,11 +383,11 @@ wdbc_pca %>%
   ) 
 ```
 
-```{r message=FALSE, warning=FALSE, results="hide", include=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, results="hide", include=FALSE}
 res.pca <- PCA(df[, 1:9],  scale.unit=TRUE) 
 ```
 
-```{r message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo=FALSE, fig.width = 8, fig.height=4}
 fviz_pca_var(res.pca,
              alpha.var = "contrib",
              col.var = "contrib", 
@@ -393,7 +398,7 @@ fviz_pca_var(res.pca,
 
 
 <!-- Ahora realizaremos un gráfico 3D con los primeros tres Componentes Principales. -->
-```{r message=FALSE, warning=FALSE, echo =FALSE}
+```{r fig.align = "center",message=FALSE, warning=FALSE, echo =FALSE}
 df1 <- cbind(df, pca_fit$x)
 # head(df1)
 
@@ -409,7 +414,7 @@ df1 <- cbind(df, pca_fit$x)
 
 <!-- Notemos que la mayoria de los puntos están concentrados en el centro. Por lo que podemos concluir que nuevamente no logró hacer una separación clara. -->
 
-<!-- ```{r message=FALSE, warning=FALSE}
+<!-- ```{r fig.align = "center",message=FALSE, warning=FALSE}
 
 fig <- plot_ly(df1, x = ~PC1, y = ~PC2, z = ~PC3, color = ~Potability, colors = c('#BF382A', '#0C4B8E'))
 fig <- fig %>% add_markers()
@@ -420,13 +425,13 @@ fig
 ``` -->
 
 ### Conclusión PCA
-Con este método no es posible reducir la dimensión de los datos por la baja correlación entre las variables, necesaria para aplicar PCA, y en consecuencia el alta varianza explicada por cada uno de los 9 componentes, lo que indica que no es factible reducir las dimensiones.
+Con este método no es posible reducir la dimensión de los datos por la baja correlación entre las variables, necesaria para aplicar PCA, y en consecuencia la alta varianza explicada por cada uno de los 9 componentes, lo que indica que no es factible reducir las dimensiones.
 
 ## **tSNE**
 
+A continuación vamos a hacer uso del algoritmo t-SNE con el paquete `Rtsne`.
 
-A continuación vamos a hacer uso del algoritmo t-SNE ya que, como vimos en el método de PCA, con el paquete `Rtsne`.
-```{r, message=FALSE, warning=FALSE}
+```{r fig.align = "center", message=FALSE, warning=FALSE}
 set.seed(123)
 
 df_Rtsne <- df %>%
@@ -437,24 +442,26 @@ df_Rtsne <- df %>%
 
 **Agregando los resultados de  t-SNE a la base:**
 
-```{r, warning=FALSE, message=FALSE}
+```{r fig.align = "center", warning=FALSE, message=FALSE}
 datos1<-data.frame(Rtsne1=df_Rtsne$Y[,1],Rtsne2=df_Rtsne$Y[,2],Potability=df$Potability)
 ```
 
-```{r, warning=FALSE, message=FALSE, echo=FALSE}
+```{r fig.align = "center", warning=FALSE, message=FALSE, echo=FALSE, fig.width = 8, fig.height=4}
 ggplot(datos1,aes(x=Rtsne1,y=Rtsne2,color=Potability))+
   geom_point(size=1.5) +
   scale_color_manual(values = c("0" = "#ec7d15", "1" = "#10b9ec")) +
   labs(title="Potabilidad: Rtsne")
 
 ```
-Podemos observar que aplicando Rtsne no se ve una separación de los grupos.
+
+Podemos observar que aplicando t-SNE no se ve una separación de los grupos.
 
 Veamos ahora aplicando la misma función pero modificando hiperparámetros: perplexity y la tasa de aprendizaje.
+
 * perplexity: Con los valores de 10, 15, 20, 25 30,
 * Tasa de aprendizaje: con los valores de 10, 50, 100, 150.
 
-```{r, message=FALSE, warning=FALSE, results = "hide"} 
+```{r fig.align = "center", message=FALSE, warning=FALSE, results = "hide"} 
 set.seed(123)
 Rtsne_params2 = expand.grid(perplexity=c(10,15,20,25,30), eta = c(10, 50, 100, 150))
 
@@ -473,7 +480,7 @@ Rtsne_res2 = lapply(seq(nrow(Rtsne_params2)), function(i) {
 })
 ```
 
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center", message=FALSE, warning=FALSE, echo=FALSE, fig.width = 15, fig.height=7}
 
 d3 = rbindlist(lapply(seq(nrow(Rtsne_params2)), function(i) {
   data.table(
@@ -508,44 +515,45 @@ p3
 
 **El gif con la animación se incluye en la carpeta de envío.**
 
-```{r, message=FALSE, warning=FALSE, include =FALSE}
-colores = c("0" = "#ec7d15","1" = '#10b9ec')
-# names(colores) = c("0","1")
+```{r fig.align = "center", message=FALSE, warning=FALSE, include =FALSE}
+# colores = c("0" = "#ec7d15","1" = '#10b9ec')
+# # names(colores) = c("0","1")
 
-anim_plot1<-d3 %>% 
-  filter(perplexity == 10 | perplexity == 15 | perplexity == 20 | perplexity == 25 | perplexity == 30) %>% 
-  mutate(parametros = factor(paste('perplexity:', perplexity, 'eta:', eta))) %>% ggplot() +
-  geom_scattermore(
-    mapping = aes(x = x, y = y, col = Potability),
-    pointsize = 2
-  ) +
-  theme(
-    axis.text = element_blank(),
-    axis.ticks = element_blank(),
-    axis.title = element_blank(),
-    legend.position = "none"
-  ) +
-  theme_bw()+
-  labs(title = 'Verificación de los parámetros')+
-  scale_color_manual(values = colores) + 
-  transition_states(parametros, transition_length = 2, state_length = 3) +
-  labs(title = '{closest_state}')
+# anim_plot1<-d3 %>% 
+#   filter(perplexity == 10 | perplexity == 15 | perplexity == 20 | perplexity == 25 | perplexity == 30) %>% 
+#   mutate(parametros = factor(paste('perplexity:', perplexity, 'eta:', eta))) %>% ggplot() +
+#   geom_scattermore(
+#     mapping = aes(x = x, y = y, col = Potability),
+#     pointsize = 2
+#   ) +
+#   theme(
+#     axis.text = element_blank(),
+#     axis.ticks = element_blank(),
+#     axis.title = element_blank(),
+#     legend.position = "none"
+#   ) +
+#   theme_bw()+
+#   labs(title = 'Verificación de los parámetros')+
+#   scale_color_manual(values = colores) + 
+#   transition_states(parametros, transition_length = 2, state_length = 3) +
+#   labs(title = '{closest_state}')
 
 # animate(anim_plot1, nframes = 300)
 # anim_save("gifTsne1.gif")
 ```
 
 ### Conclusión t-SNE
-En los distintos casos de hiperparámetros podemos observar que con este método de reducción de dimensiones tampoco fue posible separar reducir la dimensión de los datos ni separar los grupos de potabilidad.
+
+En los distintos casos de hiperparámetros podemos observar que con este método de reducción de dimensiones tampoco fue posible reducir la dimensión de los datos ni separar los grupos de potabilidad.
 
 ## **UMAP**
 
-```{r, message=FALSE, warning=FALSE, include=FALSE}
+```{r fig.align = "center", message=FALSE, warning=FALSE, include=FALSE}
 tidymodels_prefer()
 ```
 
 
-```{r, message=FALSE, warning=FALSE, results = "hide"}
+```{r fig.align = "center", message=FALSE, warning=FALSE, results = "hide"}
 # UMAP sin valores de los hiper-parametros
 df_umap <- df %>%
   dplyr::select(where(is.numeric)) %>%
@@ -553,7 +561,7 @@ df_umap <- df %>%
   umap()
 ```
 
-```{r, message=FALSE, warning=FALSE, echo = FALSE}
+```{r fig.align = "center", message=FALSE, warning=FALSE, echo = FALSE, fig.width = 8, fig.height=4}
 #Base de datos
 datos<-data.frame(UMAP1=df_umap[,1],UMAP2=df_umap[,2],Potability=df$Potability)
 
@@ -571,9 +579,14 @@ Argumentos de esta función:
 * n_epochs
 * learning_rate
 
-### UMAP: Exploracion de hiperparámetros
+### UMAP: Exploracion de 
 
-```{r, message=FALSE, warning=FALSE, results = "hide"}
+Modificaremos distintos hiperparámetros: número de vecinos y la distancia mínima.
+
+* Número de vecinos: Con los valores de 10, 20, 50,  100, 150 y 200.
+* Distancia mínima: con los valores de 0.5, 0.75 y 1.1.
+
+```{r fig.align = "center", message=FALSE, warning=FALSE, results = "hide"}
 umap_params1 = expand.grid(n_neighbors = c(10, 20, 50, 100, 150, 200),min_dist = c(0.5, 0.75, 1.1))
 
 umaps = lapply(seq(nrow(umap_params1)), function(i) {
@@ -586,7 +599,7 @@ umaps = lapply(seq(nrow(umap_params1)), function(i) {
 })
 ```
 
-```{r, message=FALSE, warning=FALSE, include=FALSE}
+```{r fig.align = "center", message=FALSE, warning=FALSE, include=FALSE}
 d1 = rbindlist(lapply(seq(nrow(umap_params1)), function(i) {
   data.table(
     x = umaps[[i]][,1],
@@ -599,7 +612,7 @@ d1 = rbindlist(lapply(seq(nrow(umap_params1)), function(i) {
 ```
 
 
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
+```{r fig.align = "center", message=FALSE, warning=FALSE, echo=FALSE, fig.width = 15, fig.height=7}
 p1<-ggplot(d1) +
   geom_scattermore(
     mapping = aes(x = x, y = y,,colour=Potability),
@@ -615,34 +628,34 @@ p1<-ggplot(d1) +
              labeller = label_both,
              scales = "free") +
   theme_bw() +
-  labs(title = "WDBC: UMAP")
+  labs(title = "Potabilidad: UMAP")
 
 p1
 ```
 
-**Los gifs con las animaciones se incluyen en la carpeta de envío.**
+**El gif con la animación se incluye en la carpeta de envío.**
 
-```{r, message=FALSE, warning=FALSE, include=FALSE}
+```{r fig.align = "center", message=FALSE, warning=FALSE, include=FALSE}
 colores = c("0" = "#ec7d15","1" = '#10b9ec')
 
-anim_plot1<-d1 %>% 
-  filter(n_neighbors == 10 | n_neighbors == 20 | n_neighbors == 50 | n_neighbors == 100 | n_neighbors == 150 | n_neighbors == 200) %>% 
-  mutate(parametros = factor(paste('n_neighbors:', n_neighbors, 'min_dist:', min_dist))) %>% ggplot() +
-  geom_scattermore(
-    mapping = aes(x = x, y = y, col = Potability),
-    pointsize = 2
-  ) +
-  theme(
-    axis.text = element_blank(),
-    axis.ticks = element_blank(),
-    axis.title = element_blank(),
-    legend.position = "none"
-  ) +
-  theme_bw()+
-  labs(title = 'Verificación de los parámetros')+
-  scale_color_manual(values = colores) + 
-  transition_states(parametros, transition_length = 2, state_length = 3) +
-  labs(title = '{closest_state}')
+# anim_plot1<-d1 %>% 
+#   filter(n_neighbors == 10 | n_neighbors == 20 | n_neighbors == 50 | n_neighbors == 100 | n_neighbors == 150 | n_neighbors == 200) %>% 
+#   mutate(parametros = factor(paste('n_neighbors:', n_neighbors, 'min_dist:', min_dist))) %>% ggplot() +
+#   geom_scattermore(
+#     mapping = aes(x = x, y = y, col = Potability),
+#     pointsize = 2
+#   ) +
+#   theme(
+#     axis.text = element_blank(),
+#     axis.ticks = element_blank(),
+#     axis.title = element_blank(),
+#     legend.position = "none"
+#   ) +
+#   theme_bw()+
+#   labs(title = 'Verificación de los parámetros')+
+#   scale_color_manual(values = colores) + 
+#   transition_states(parametros, transition_length = 2, state_length = 3) +
+#   labs(title = '{closest_state}')
 
 # animate(anim_plot1, nframes = 300)
 # anim_save("gifUMAP1.gif")
@@ -651,8 +664,8 @@ anim_plot1<-d1 %>%
 
 ### Conclusión UMAP
 
-En los distintos casos de hiperparámetros podemos observar que con este método de reducción de dimensiones tampoco fue posible separar reducir la dimensión de los datos ni separar los grupos de potabilidad.
+En los distintos casos de hiperparámetros podemos observar que con este método de reducción de dimensiones tampoco fue posible reducir la dimensión de los datos ni separar los grupos de potabilidad.
 
-## Conclusión.
+## Conclusión
 
 En los tres métodos presentados no fue posible reducir la dimensión de los datos. Esto se puede deber a la baja correlación de las distintas variables. Esto podría ser un indicio de independencia de las variables, mostrando que cada variable aporta algo distinto e igualmente importante a la clasificación en la potabilidad.
